# neomath

./: README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
core/: __init__.py  expr.py  symbols.py
neomath/: __init__.py
neomath/algebra/: matrix.py
neomath/constants/: math_constants.py
neomath/core/: __init__.py  symbols.py
neomath/deprecated/: equations.py
neomath/numerics/: __init__.py  solvers.py
neomath/series/: maclaurin.py
neomath/statistics/: __init__.py  regression.py
neomath/utils/: __init__.py
neoutils/: __init__.py  equations.py  numerics.py
numerics/: __init__.py  polynomials.py  solvers.py
statistics/: __init__.py  metrics.py  r_squared.py  regression.py
utils/: __init__.py  vertex.py
